# agentic-system

./: .gitignore  AGENTS.md  CLAUDE.md  HANDOFF.md  PROGRESS.md  QUICKSTART.md  README.md  example_simple.py  pyproject.toml  requirements.txt
backend/: config.example.yaml  requirements.txt
backend/config/: agents.yaml  capabilities.yaml  system.yaml  triggers.yaml  workflows.yaml
backend/src/: config.yaml.example
backend/src/agents/: __init__.py  assistant.py  coder.py  planner.py  reviewer.py
backend/src/api/: __init__.py  dependencies.py  main.py  schemas.py
backend/src/capabilities/: __init__.py
backend/src/core/: artifacts.py  chat_history.py  config.py  mcp.py  prompts.py  skills.py  workspace.py
backend/src/utils/: __init__.py  logger.py  tracer.py
backend/tests/integration/: test_api.py
backend/tests/unit/: test_agent_loop_phase_a.py  test_agent_system.py  (+25 more)
config/: agents.yaml  capabilities.yaml  pipelines.yaml  system.yaml  triggers.yaml  workflows.yaml
docs/: api.md  architecture.md  bus-design.md  deployment.md  memory-center-review.md  orchestrator-v2.md
docs/demo/: DEFENSE_MATERIALS.md  DEMO_ACCEPTANCE_2026-05-11.md
docs/thesis_package/: PAPER_WRITING_BRIEF.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  index.css  theme.css
frontend/tests/: agentFormLogic.test.mjs  messageTimeline.test.mjs
scripts/: verify_memory_persistence.py
tests/: api_live_test.py  scenario_cli_tool.md  scenario_data_pipeline.md  scenario_game_engine.md  scenario_test.py  scenario_web_api.md
(+122 files in other folders)
